--- a/module6/santos_module6_2.css
+++ b/module6/santos_module6_2.css
@@ -32,10 +32,7 @@ NavBar a:hover {
 }
 
 .Container {
-  margin-top: 2%;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding: 10px;
+   margin: 2% 5% 100px 5%;
 }
 
 .Card {
@@ -61,7 +58,8 @@ NavBar a:hover {
 
 footer {
   background-color: #2d218a; 
-  position: absolute;
+  position: fixed;
+  left: 0;
   bottom: 0;
   width: 100%;
 }
@@ -83,3 +81,23 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+
+#movies{
+	border-collapse: collapse;
+	width:100%;
+	margin-bottom:30px;
+}
+
+#movies th{
+	padding-top:12px;
+	padding-bottom:12px;
+	text-align:left;
+}
+
+#movies td{
+	border:solid;
+	border-width:1px;
+	border-color:#ddd;
+	padding:8px;
+}
+
