--- a/site.css
+++ b/site.css
@@ -10,13 +10,13 @@ body{
 h1{
 	background-color:#217791;
 	color:white;
-	border: 1px solid #D6A800
+	border: 1px solid #D6A800;
 	padding: 10px;
 }
 h2{
 	background-color:#2d218a;
 	color:white;
-	border: 1px solid #D6A800
+	border: 1px solid #D6A800;
 	padding: 10px;
 }
 h3{
@@ -28,6 +28,6 @@ h3{
 h4{
 	background-color:#2d218a;
 	color:white;
-	border: 1px solid #D6A800
+	border: 1px solid #D6A800;
 	padding: 10px;
 }
